AC_INIT([foobar], [0.01], [foobar@testing.com], [foobar], [http://www.example.com])
AC_PREREQ([2.68]) # autoconf ver -ge 2.68
AC_CONFIG_SRCDIR([foobar.c]) # file must exist
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([1.11 -Wall -Werror])
AC_CONFIG_FILES([Makefile])
AC_PROG_CC
AC_OUTPUT
